--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,11 +16,11 @@
     <div class="hero">
       <div class="hero-content">
         <img src="img/intel-logo.svg" alt="Intel Logo" class="intel-logo" />
-        <h1>Team Sustainability Summit</h1>
+        <h1>Team Sustanibility Summit</h1>
         <div class="hero-divider"></div>
         <p>
-          <i class="fas fa-leaf"></i> Check-in system for sustainability event
-          attendees
+          <i class="fas fa-leaf"></i> This website is a check-in system for
+          event attendees.
         </p>
       </div>
     </div>
@@ -28,7 +28,10 @@
     <div class="attendance-tracker">
       <div class="attendance-header">
         <i class="fas fa-users"></i>
-        Attendance: <span id="attendeeCount">0</span>/50
+        Attendance: <span id="attendeeCount">0</span>/<span
+          id="totalAttendeeCount"
+          >50</span
+        >
       </div>
       <div class="progress-container">
         <div id="progressBar" class="progress-bar"></div>
@@ -47,14 +50,14 @@
               type="text"
               id="attendeeName"
               name="attendeeName"
-              placeholder="Enter name..."
+              placeholder="Enter attendee name"
               required
             />
             <select id="teamSelect" name="team" required>
               <option value="" disabled selected>Select Team...</option>
-              <option value="water">Team Water Wise</option>
-              <option value="zero">Team Net Zero</option>
-              <option value="power">Team Renewables</option>
+              <option value="Water Wise">Water Wise</option>
+              <option value="Net Zero">Net Zero</option>
+              <option value="Renewables">Renewables</option>
             </select>
           </div>
           <button type="submit" id="checkInBtn">
@@ -68,19 +71,24 @@
         <h3>Team Attendance</h3>
         <div class="teams-grid">
           <div class="team-card water">
-            <span class="team-name">🌊 Team Water Wise</span>
+            <span class="team-name">🌊 Water Wise</span>
             <span class="team-count" id="waterCount">0</span>
+            <ul class="team-members" id="waterList"></ul>
           </div>
           <div class="team-card zero">
-            <span class="team-name">🌿 Team Net Zero</span>
+            <span class="team-name">🌿 Net Zero</span>
             <span class="team-count" id="zeroCount">0</span>
+            <ul class="team-members" id="zeroList"></ul>
           </div>
           <div class="team-card power">
-            <span class="team-name">⚡ Team Renewables</span>
+            <span class="team-name">⚡ Renewables</span>
             <span class="team-count" id="powerCount">0</span>
+            <ul class="team-members" id="powerList"></ul>
           </div>
         </div>
       </div>
+
+      <p id="celebrationMessage" class="celebration-message"></p>
     </div>
 
     <footer class="footer">
